
Depreciation Schedule and Status (!!!)
--------------------------------------

POE is due for a round of breakage to make things more consistent.

  1. In the wheels, rename /.*State/ to /.*Event/.  Wheels don't
     define states, they emit events.  Calling Wheels' parameters
     /.*State/ is inconsistent and confusing.

     TODO: Verify that the new code passes existing tests.
     TODO: Port existing tests and samples to /.*Event/.

     TODO: Have the support and documentation changes on the CPAN for
           28 days.

     TODO: Add depreciation warnings for /.*State/ uses.

     TODO: Have the depreciation warnings on the CPAN for 28 days.

     TODO: Remove /.*State/ warnings and support.

  2. ARG0..ARG9 in built-in events are silly.  The whole point of
     using array slices and constant offsets is to avoid positional
     dependencies.  Using ARG0..ARG9 defeats most of this technique's
     benefits.  D'oh!

     a. Introduce new constants for different built-in events.
        Document them instead of ARG0..ARG9.  Document that ARG0..ARG9
        will no longer be guaranteed true for built-in events.  Revise
        the tests and samples to avoid ARG0..ARG9 for built-in events.

     b. Generate warnings when ARG0..ARG9 are used for built-in
        events.  There will be a performance penalty during this phase
        since ARG0..ARG9 will be computed and not truly constant.
        Bleah!

     c. Remove the warnings from ARG0..ARG9.  Users are on their own.
        Keep the documentation to that effect.

  3. Split some of the optionally useful bits out into a separate
     Bundle which is included in Bundle::POE.  Let people install
     subsets of POE as needed.  This may not happen, but it's listed
     here for others' consideration.

     a. Set up Bundle::POE, Bundle::POE-Tk, Bundle::POE-Gtk, and
        Bundle::POE-Event.  Document them, and make Bundle::POE the
        default.  Bundle::POE-Options to include optional required